src/objects/BGCM__Test__c.object
<CustomObject>
    <fields>
        <fullName>BGCK__Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>BGCK__Answer__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCM__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup field for testing purposes.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCM__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>BGCM__Issued_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issued Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGCM__Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGCM__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>BGCM__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>OK</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BGCM__test0</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>abc</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>first</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>last</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>222</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>notEqual</operation>
            <value>7/2/2015 12:00 AM</value>
        </filters>
        <label>test0</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>